--- a/Software V1/RemiseSysteem Groep B/RemiseSysteem Groep B/RemiseSysteem Groep B.csproj
+++ b/Software V1/RemiseSysteem Groep B/RemiseSysteem Groep B/RemiseSysteem Groep B.csproj
@@ -44,14 +44,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Beheer.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Beheer.Designer.cs">
+      <DependentUpon>Beheer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Bestuur.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Bestuur.Designer.cs">
+      <DependentUpon>Bestuur.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reparatie.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reparatie.Designer.cs">
+      <DependentUpon>Reparatie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Schoonmaak.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Schoonmaak.Designer.cs">
+      <DependentUpon>Schoonmaak.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
