--- a/Software V1/RemiseSysteem Groep B/RemiseSysteem Groep B/RemiseSysteem Groep B.csproj
+++ b/Software V1/RemiseSysteem Groep B/RemiseSysteem Groep B/RemiseSysteem Groep B.csproj
@@ -44,32 +44,45 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Beheer.cs">
+    <Compile Include="BeheerApplicatie.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Beheer.Designer.cs">
-      <DependentUpon>Beheer.cs</DependentUpon>
+    <Compile Include="BeheerApplicatie.Designer.cs">
+      <DependentUpon>BeheerApplicatie.cs</DependentUpon>
     </Compile>
-    <Compile Include="Bestuur.cs">
+    <Compile Include="BestuurApplicatie.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Bestuur.Designer.cs">
-      <DependentUpon>Bestuur.cs</DependentUpon>
+    <Compile Include="BestuurApplicatie.Designer.cs">
+      <DependentUpon>BestuurApplicatie.cs</DependentUpon>
     </Compile>
+    <Compile Include="Beurt.cs" />
+    <Compile Include="BeurtType.cs" />
+    <Compile Include="Lijn.cs" />
+    <Compile Include="Medewerker.cs" />
+    <Compile Include="MedewerkerType.cs" />
+    <Compile Include="Onderhoud.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reparatie.cs">
+    <Compile Include="Remise.cs" />
+    <Compile Include="ReparatieApplicatie.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Reparatie.Designer.cs">
-      <DependentUpon>Reparatie.cs</DependentUpon>
+    <Compile Include="ReparatieApplicatie.Designer.cs">
+      <DependentUpon>ReparatieApplicatie.cs</DependentUpon>
     </Compile>
-    <Compile Include="Schoonmaak.cs">
+    <Compile Include="Schoonmaak.cs" />
+    <Compile Include="SchoonmaakApplicatie.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Schoonmaak.Designer.cs">
-      <DependentUpon>Schoonmaak.cs</DependentUpon>
+    <Compile Include="SchoonmaakApplicatie.Designer.cs">
+      <DependentUpon>SchoonmaakApplicatie.cs</DependentUpon>
     </Compile>
+    <Compile Include="Sector.cs" />
+    <Compile Include="Spoor.cs" />
+    <Compile Include="Tram.cs" />
+    <Compile Include="TramStatus.cs" />
+    <Compile Include="TramType.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -79,8 +92,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Reparatie.resx">
-      <DependentUpon>Reparatie.cs</DependentUpon>
+    <EmbeddedResource Include="ReparatieApplicatie.resx">
+      <DependentUpon>ReparatieApplicatie.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
