--- a/Software V1/RemiseSysteem Groep B/RemiseSysteem Groep B/RemiseSysteem Groep B.csproj
+++ b/Software V1/RemiseSysteem Groep B/RemiseSysteem Groep B/RemiseSysteem Groep B.csproj
@@ -66,11 +66,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Remise.cs" />
-    <Compile Include="ReparatieApplicatie.cs">
+    <Compile Include="OnderhoudApplicatie.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ReparatieApplicatie.Designer.cs">
-      <DependentUpon>ReparatieApplicatie.cs</DependentUpon>
+    <Compile Include="OnderhoudApplicatie.Designer.cs">
+      <DependentUpon>OnderhoudApplicatie.cs</DependentUpon>
     </Compile>
     <Compile Include="Schoonmaak.cs" />
     <Compile Include="SchoonmaakApplicatie.cs">
@@ -93,8 +93,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ReparatieApplicatie.resx">
-      <DependentUpon>ReparatieApplicatie.cs</DependentUpon>
+    <EmbeddedResource Include="OnderhoudApplicatie.resx">
+      <DependentUpon>OnderhoudApplicatie.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
