--- a/Software V1/RemiseSysteem Groep B/RemiseSysteem Groep B/RemiseSysteem Groep B.csproj
+++ b/Software V1/RemiseSysteem Groep B/RemiseSysteem Groep B/RemiseSysteem Groep B.csproj
@@ -63,6 +63,18 @@
     <Compile Include="Medewerker.cs" />
     <Compile Include="MedewerkerType.cs" />
     <Compile Include="Onderhoud.cs" />
+    <Compile Include="OnderhoudApplicatie.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OnderhoudApplicatie.Designer.cs">
+      <DependentUpon>OnderhoudApplicatie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OpstartForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OpstartForm.Designer.cs">
+      <DependentUpon>OpstartForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Remise.cs" />
@@ -80,6 +92,12 @@
     <Compile Include="TramType.cs" />
     <EmbeddedResource Include="BeheerApplicatie.resx">
       <DependentUpon>BeheerApplicatie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OnderhoudApplicatie.resx">
+      <DependentUpon>OnderhoudApplicatie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OpstartForm.resx">
+      <DependentUpon>OpstartForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
