--- a/Software V1/RemiseSysteem Groep B/RemiseSysteem Groep B/RemiseSysteem Groep B.csproj
+++ b/Software V1/RemiseSysteem Groep B/RemiseSysteem Groep B/RemiseSysteem Groep B.csproj
@@ -52,6 +52,12 @@
     <Compile Include="BeheerApplicatie.Designer.cs">
       <DependentUpon>BeheerApplicatie.cs</DependentUpon>
     </Compile>
+    <Compile Include="BeheerApp-BeurtInvoeren.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BeheerApp-BeurtInvoeren.Designer.cs">
+      <DependentUpon>BeheerApp-BeurtInvoeren.cs</DependentUpon>
+    </Compile>
     <Compile Include="BestuurApplicatie.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,9 @@
     <Compile Include="Tram.cs" />
     <Compile Include="TramStatus.cs" />
     <Compile Include="TramType.cs" />
+    <EmbeddedResource Include="BeheerApp-BeurtInvoeren.resx">
+      <DependentUpon>BeheerApp-BeurtInvoeren.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BeheerApplicatie.resx">
       <DependentUpon>BeheerApplicatie.cs</DependentUpon>
     </EmbeddedResource>
