--- a/Software V1/RemiseSysteem Groep B/RemiseSysteem Groep B/RemiseSysteem Groep B.csproj
+++ b/Software V1/RemiseSysteem Groep B/RemiseSysteem Groep B/RemiseSysteem Groep B.csproj
@@ -122,6 +122,12 @@
     </Compile>
     <Compile Include="TramStatus.cs" />
     <Compile Include="TramType.cs" />
+    <Compile Include="TramVerplaatsen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TramVerplaatsen.Designer.cs">
+      <DependentUpon>TramVerplaatsen.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="BeheerApp-BeurtInvoeren.resx">
       <DependentUpon>BeheerApp-BeurtInvoeren.cs</DependentUpon>
     </EmbeddedResource>
@@ -157,6 +163,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="TramReserveren.resx">
       <DependentUpon>TramReserveren.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TramVerplaatsen.resx">
+      <DependentUpon>TramVerplaatsen.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
