--- a/Software V1/RemiseSysteem Groep B/RemiseSysteem Groep B/RemiseSysteem Groep B.csproj
+++ b/Software V1/RemiseSysteem Groep B/RemiseSysteem Groep B/RemiseSysteem Groep B.csproj
@@ -155,6 +155,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SchoonmaakApplicatie.resx">
+      <DependentUpon>SchoonmaakApplicatie.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SchoonmaakGoedkeuren.resx">
       <DependentUpon>SchoonmaakGoedkeuren.cs</DependentUpon>
     </EmbeddedResource>
