--- a/Software V1/RemiseSite Groep B/RemiseSite Groep B/RemiseSite Groep B.csproj
+++ b/Software V1/RemiseSite Groep B/RemiseSite Groep B/RemiseSite Groep B.csproj
@@ -39,12 +39,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Oracle.DataAccess, Version=4.112.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=AMD64" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Data.OracleClient" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
@@ -158,7 +158,7 @@
     <Content Include="Account\ResetPasswordConfirmation.aspx" />
     <Content Include="administrator.aspx" />
     <Content Include="Bestuurder.aspx" />
-    <Content Include="Beurt.aspx" />
+    <Content Include="Beurtpage.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -305,12 +305,12 @@
     <Compile Include="Bestuurder.aspx.designer.cs">
       <DependentUpon>Bestuurder.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Beurt.aspx.cs">
-      <DependentUpon>Beurt.aspx</DependentUpon>
+    <Compile Include="Beurtpage.aspx.cs">
+      <DependentUpon>Beurtpage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Beurt.aspx.designer.cs">
-      <DependentUpon>Beurt.aspx</DependentUpon>
+    <Compile Include="Beurtpage.aspx.designer.cs">
+      <DependentUpon>Beurtpage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Classes\Beurt.cs" />
     <Compile Include="Classes\BeurtType.cs" />
