--- a/Software V1/RemiseSite Groep B/RemiseSite Groep B/RemiseSite Groep B.csproj
+++ b/Software V1/RemiseSite Groep B/RemiseSite Groep B/RemiseSite Groep B.csproj
@@ -171,6 +171,7 @@
     <Content Include="Account\Web.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Reserveren.aspx" />
+    <Content Include="SchoonmaakPage.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -352,6 +353,13 @@
     </Compile>
     <Compile Include="Reserveren.aspx.designer.cs">
       <DependentUpon>Reserveren.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="SchoonmaakPage.aspx.cs">
+      <DependentUpon>SchoonmaakPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SchoonmaakPage.aspx.designer.cs">
+      <DependentUpon>SchoonmaakPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
