--- a/Software V1/RemiseSite Groep B/RemiseSite Groep B/RemiseSite Groep B.csproj
+++ b/Software V1/RemiseSite Groep B/RemiseSite Groep B/RemiseSite Groep B.csproj
@@ -164,7 +164,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="Onderhoud.aspx" />
+    <Content Include="OnderhoudPage.aspx" />
     <Content Include="packages.config" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -342,12 +342,12 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Onderhoud.aspx.cs">
-      <DependentUpon>Onderhoud.aspx</DependentUpon>
+    <Compile Include="OnderhoudPage.aspx.cs">
+      <DependentUpon>OnderhoudPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Onderhoud.aspx.designer.cs">
-      <DependentUpon>Onderhoud.aspx</DependentUpon>
+    <Compile Include="OnderhoudPage.aspx.designer.cs">
+      <DependentUpon>OnderhoudPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reserveren.aspx.cs">
