--- a/Software V1/RemiseSite Groep B/RemiseSite Groep B/RemiseSite Groep B.csproj
+++ b/Software V1/RemiseSite Groep B/RemiseSite Groep B/RemiseSite Groep B.csproj
@@ -159,6 +159,7 @@
     <Content Include="Account\ResetPasswordConfirmation.aspx" />
     <Content Include="administrator.aspx" />
     <Content Include="Bestuurder.aspx" />
+    <Content Include="BeurtPage.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -309,6 +310,13 @@
     </Compile>
     <Compile Include="Bestuurder.aspx.designer.cs">
       <DependentUpon>Bestuurder.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="BeurtPage.aspx.cs">
+      <DependentUpon>BeurtPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="BeurtPage.aspx.designer.cs">
+      <DependentUpon>BeurtPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Classes\Beurt.cs" />
     <Compile Include="Classes\BeurtType.cs" />
